--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barcode Scanner</title>
+    <style>
+        #output{
+            height:300px;
+        }
+    </style>
 </head>
 <body>
+    <form action="#">
+        <input type="file" name="image" id="imageBarcode">
+    </form>
+    <img src="#" id="output" alt="">
     <div id="interactive" class="viewport">
         <video autoplay="true" preload="auto"></video>
     </div>
     <p id="message"></p>
 
     <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
-    <script src="https://cdn.rawgit.com/serratus/quaggaJS/0420d5e0/dist/quagga.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js" integrity="sha512-bCsBoYoW6zE0aja5xcIyoCDPfT27+cGr7AOCqelttLVRGay6EKGQbR6wm6SUcUGOMGXJpj+jrIpMS6i80+kZPw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./main.js" async></script>
 </body>
 </html>
