file upload working, need to work on livestream

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     </style>
 </head>
 <body>
+    <button id="startStream">Scan Via Camera</button>
+
     <form action="#">
         <input type="file" name="image" id="imageBarcode">
     </form>
     <img src="#" id="output" alt="">
+
     <div id="interactive" class="viewport">
         <video autoplay="true" preload="auto"></video>
     </div>
