--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div id="liveStream">
         <button id="startStream">Scan Via Camera</button>
-        <div id="interactive_kings" class="viewport">
+        <div id="interactive" class="viewport">
             <video autoplay="true" preload="auto"></video>
         </div>
         <button id="endStream">Close Camera</button>
