--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <img src="#" id="output" alt="">
     </div>
 
+    <div id="liveStream">
+        <button id="startStream">Scan Via Camera</button>
+        <div id="interactive" class="viewport">
+            <video autoplay="true" preload="auto"></video>
+        </div>
+        <button id="endStream">Close Camera</button>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"
         integrity="sha512-bCsBoYoW6zE0aja5xcIyoCDPfT27+cGr7AOCqelttLVRGay6EKGQbR6wm6SUcUGOMGXJpj+jrIpMS6i80+kZPw=="
