added a button to start the scanning process

--- a/alternative.html
+++ b/alternative.html
@@ -9,13 +9,18 @@
 
     <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <style>
+        
+    </style>
   </head>
 
   <body>
 
     <div id="customMessage"></div>
+
+    <button id="barcodeStarter">Start Scanning</button>
     
-    <section id="container" class="container">
+    <section id="barcode_container" class="container">
         <h3>The user's camera</h3>
         <div class="controls">
             <fieldset class="input-group">
